# cloudknot

./: .flake8  .gitignore  .ignore  .mise.toml  .pre-commit-config.yaml  Makefile  new_dockerfile_template.Dockerfile  pyproject.toml  ruff-extra.toml  setup.cfg  setup.py
.github/workflows/: docbuild.yml  publish-to-test-pypi.yml  pythonpackage.yml
.maintenance/: update_zenodo.py
cloudknot/: __init__.py  cli.py  cloudknot.py  config.py  dockerimage.py  github_requirements.py  pyproject.toml  validate.py
cloudknot/aws/: __init__.py  base_classes.py  batch.py  clients.py  ecr.py
cloudknot/commands/: configure.py
cloudknot/data/docker_reqs_ref_data/py3/ref1/: Dockerfile  unit-testing-func.py
cloudknot/data/docker_reqs_ref_data/py3/ref2/: Dockerfile
cloudknot/data/profiles_ref_data/: cloudknot_without_profile
cloudknot/templates/: Dockerfile  Dockerfile.template
cloudknot/templates/yml/: batch-environment-increase-ebs-volume.template  batch-environment.template  pars-with-new-vpc.template
cloudknot/tests/: pyproject.toml  test_aws.py  test_config.py  test_docker_image.py  test_knot.py  test_pars.py  test_validate.py
doc/: conf.py  documentation.rst
doc/_templates/: custom_module.rst
examples/: 00_random_matrix_vector_multiply.ipynb
examples/cloudknot_docker_random-mv-prod_f33mb472/: Dockerfile
examples/cloudknot_docker_random-mv-prod_h1r4h54p/: Dockerfile
examples/cloudknot_docker_random-mv-prod_mz_g46h8/: requirements.txt
examples/cloudknot_docker_random-mv-prod_rp12oo06/: random-mv-prod.py
examples/cloudknot_docker_random-mv-prod_t2hzzg97/: Dockerfile  requirements.txt
examples/cloudknot_docker_random-mv-prod_udqpel9n/: requirements.txt
src/: python3.11-dpkg.txt  python3.11-slim-dpkg.txt
src/cloudknot/: __init__.py  _version.py  cli.py  cloudknot.py  config.py  dockerimage.py  github_requirements.py  validate.py
src/cloudknot/aws/: __init__.py  _clients.py  base_classes.py  batch.py  clients.py  ecr.py
src/cloudknot/commands/: configure.py
src/cloudknot/data/docker_reqs_ref_data/py3/ref1/: Dockerfile  unit-testing-func.py
src/cloudknot/templates/yml/: batch-environment-gpu-increase-ebs-volume.template  batch-environment-gpu.template  pars-with-default-vpc.template
src/cloudknot/tests/: test_aws.py
tests/: pyproject.toml  test_aws.py  test_docker_image.py  test_knot.py
