[project]
name = "cloudknot"
dynamic = ["version"]
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Adam Richie-Halford", email = "richiehalford@gmail.com" }]
maintainers = [
	{ name = "Adam Richie-Halford", email = "richiehalford@gmail.com" }
]
description = "Cloudknot: a python library designed to run your existing python code on AWS Batch"
readme = "README.md"
classifiers = [
	"Development Status :: 3 - Alpha",
	"Environment :: Console",
	"Intended Audience :: Science/Research",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
	"Programming Language :: Python",
	"Topic :: Scientific/Engineering"
]
dependencies = [
	"boto3>=1.34.55,<2",
	"botocore>=1.34.55,<2",
	"cloudpickle>=3.0.0,<4",
	"docker>=7.0.0,<8",
	"pipreqs==0.4.13",
	"tenacity>=8.2.3,<9",
]

[project.urls]
"Homepage" = "https://nrdg.github.io/cloudknot"
"Source" = "https://github.com/nrdg/cloudknot"

[project.optional-dependencies]
dev = [
	"coverage>=7.4,<8",
	"numpydoc>=1.6.0,<2",
	"moto[cloudformation]==4.1.5",
	"pre-commit>=3.6.2,<4",
	"ruff>=0.3.1,<1",
	"pytest-cov>=4.1.0,<5",
	"pytest-xdist[psutil]==2.1.0",
	"pytest>=8.0.0,<9",
	"sphinx==5.0.0",
]
maint = ["rapidfuzz>=3.6.2,<4"]

[project.scripts]
cloudknot = "cloudknot.cli:main"

[build-system]
requires = ["setuptools", "wheel", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.setuptools]
package-data = { "cloudknot" = [
	"data/*",
	"data/*/*",
	"data/*/*/*",
	"data/*/*/*/*",
	"templates/*"
] }

[tool.pytest.ini_options]
addopts = "--doctest-modules"
norecursedirs = "src/cloudknot/data"

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py310"
extend-exclude = ["doc/*", "examples/*"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
